k8s/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doc-ocr
  labels:
    name: doc-ocr
