k8s/doc-ocr-backend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-ocr-backend
  namespace: doc-ocr
  labels:
    app: doc-ocr-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-ocr-backend
  template:
    metadata:
      labels:
        app: doc-ocr-backend
    spec:
      containers:
      - name: doc-ocr-backend
        image: gcr.io/${PROJECT_ID}/doc-ocr-backend:TAG # Placeholder
        ports:
        - containerPort: 8000
