k8s/doc-ocr-processing-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-ocr-processing
  namespace: doc-ocr
  labels:
    app: doc-ocr-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-ocr-processing
  template:
    metadata:
      labels:
        app: doc-ocr-processing
    spec:
      containers:
      - name: doc-ocr-processing
        image: gcr.io/${PROJECT_ID}/doc-ocr-processing:TAG # Placeholder, will be replaced by Cloud Build
        volumeMounts:
        - name: gcp-sa-key-volume
          mountPath: "/app/credentials"
          readOnly: true
      volumes:
      - name: gcp-sa-key-volume
        secret:
          secretName: gcp-sa-key
          items:
          - key: service-account-key.json # This should match the key in the secret data
            path: service-account-key.json
