k8s/kafka-StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: doc-ocr
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.3.0
        ports:
        - containerPort: 9092
          name: kafka-internal
