k8s/doc-ocr-backend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-ocr-backend
  namespace: doc-ocr
spec:
  selector:
    app: doc-ocr-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
