k8s/doc-ocr-frontend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doc-ocr-frontend
  namespace: doc-ocr
spec:
  selector:
    app: doc-ocr-frontend
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
