k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-kafka
  namespace: doc-ocr
spec:
  ports:
  - name: kafka-internal
    port: 29092
    targetPort: 29092
  - name: kafka-external
    port: 9092
    targetPort: 9092
  selector:
    app: kafka
