k8s/mongodb-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: doc-ocr
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
