k8s/zookeeper-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: doc-ocr
spec:
  ports:
  - port: 2181
    targetPort: 2181
  selector:
    app: zookeeper
